2002-11-26  Not Zed  <NotZed@Ximian.com>

	* htmlembedded.c (draw): Dont do a queue_redraw if we're ever
	asked to draw.  Hack-fix to stop evolution-mail hanging so often.
	Added FIXME about it.

2002-11-21  Radek Doulik  <rodo@ximian.com>

	* htmlplainpainter.c (draw_text): use lower level pango iface

	* htmlgdkpainter.c
	(html_gdk_painter_text_itemize_and_prepare_glyphs): exported

	* htmltextslave.c (get_words_width): make sure we don't read
	word_width [-1]

	* htmlclueflow.c (object_nb_width): fixed typo, use
	html_text_slave_get_nb_width instead of html_text_slave_nb_width

2002-11-20  Larry Ewing  <lewing@ximian.com>

	* htmlengine.c (parse_i): parse style args.

	* htmlstyle.c: add missing includes.

	* htmlstyle.h: add missing prototypes.

	* htmllinktext.c (get_font_style): stop forcing an underline.

	* htmlengine.c: change push_span to push_element. Make current_*
	skip elements with no style set.  Make elements that restore
	alignment use the e->divAlign not pAlign and clear pAlign whenever
	we push a block.
	(parse_a): parse style attribute on a element.
	(parse_b): parse style attribute on b element.
	(parse_h): pop ID_HEADER blocks before starting a new header.
	
	* htmlstyle.c: added.  Moves the style setting logic into a
	separate file. Add demonstration parser for style attributes (a
	real parser will come later).

	* htmlstyle.h: added.

	* Makefile.am: add htmlstyle.[ch]

2002-11-19  Not Zed  <NotZed@Ximian.com>

	* htmlclosures.list: BOOL:POINTER -> BOOL:OBJECT
	removed VOID:POINTER,POINTER
	VOID:POINTER,POINTER,POINTER -> VOID:STRING,STRING,STRING

	* htmlengine.c (html_engine_class_init): change
	marshal_BOOL_POINTER -> BOOL__OBJECT for object_requested signal.
	(html_engine_class_init): submit -> STRING_STRING_STRING.

	* gtkhtml.c (gtk_html_class_init): change marshal_BOOL__POINTER ->
	BOOL__OBJECT for object_requested.   Also changed marshaller for
	iframe_created signal to be VOID__OBJECT.